Bugreport918 vertical spacing in side menu (#926)
* fixed vertical spacing issue in firefox

* removed unnecessary important tag from css

* bugfix - sidebar only shows icons if collapsed

* fixed styling for hover sidebar

* removed unnecessary height property + linting

* fixed item-wrapper styling

* linting fix

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -114,11 +114,9 @@
     }
 
     .submenu-title-noDropdown {
-      padding: 0 !important;
       position: relative;
 
       .el-tooltip {
-        padding: 0 !important;
 
         .svg-icon {
           margin-left: 20px;
